build : application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     driver-class-name: org.h2.Driver
 
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: create
     properties:
@@ -13,6 +14,7 @@ spring:
         show_sql: true
         format_sql: true
         default_batch_fetch_size: 1000 #최적화 옵션
+
 
 logging.level:
   org.hibernate.SQL: debug
