DATA : data.sql 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,16 +4,18 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+    initialization-mode: always
 
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
         format_sql: true
         default_batch_fetch_size: 1000 #최적화 옵션
+    defer-datasource-initialization: true
 
 
 logging.level:
